@@ -1,3 +1,9 @@
+Sat Apr 19 15:38:29 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* parse.y (primary): flush cmdarg flags inside left-paren in a
+	  command argument, to allow parenthesed do-block as an argument
+	  without arguments parentheses.  [ruby-core:61950] [Bug #9726]
+
 Sat Apr 19 10:07:24 2014  Tanaka Akira  <akr@fsij.org>
 
 	* internal.h (struct RBignum): Use size_t for len.
